Reformat to 100 line length